Fixed mobile formatting and updated resume

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								
-								<label style="margin-top: 15px; margin-bottom: 0px;" for="simon-proj-button">Simon Alarm Clock</label>
+								<h3 style="margin-top: 15px; margin-bottom: 0px;">Simon Alarm Clock</h3>
 								<button id="simon-proj-button" 
 									style="background-image: url(images/simonClock.png); background-size:contain; background-position: center; background-repeat: no-repeat;
-									height: 250px; width: 350px; padding: 30px;
-									font-weight: bold;"
-									onclick="window.location.href='#simon'"> </button>
+									height: 250px; width: 100%; padding: 30px;"
+									onclick="window.location.href='#simon'"></button>
+									<!-- font-style: bold; font-size: 30px; text-shadow: black 0.07em 0.07em 0.07em" -->
 								
-								<label style="margin-top: 15px; margin-bottom: 0px;" for="capstone-proj-button">OnBoard Senior Capstone</label>
+								<h3 style="margin-top: 15px; margin-bottom: 0px;">OnBoard Senior Capstone</h3>
 								<button id="capstone-proj-button"
 									style="background-image: url(images/onboardLogo.svg); background-size:contain; background-position: center; background-repeat: no-repeat;
-									height: 250px; width: 350px; margin: auto;
-									font-size: 30px; text-shadow: black 0.07em 0.07em 0.07em"
-									onclick="window.location.href='#capstone'"> </button>
+									height: 250px; width: 100%; margin: auto;"
+									onclick="window.location.href='#capstone'"></button>
+									<!-- font-style: bold; font-size: 30px; text-shadow: black 0.07em 0.07em 0.07em" -->
 							</article>
 
 							<article id="capstone">
