--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- Intro -->
 							<article id="about">
 								<h2 class="major" style="margin-bottom: 15px;">About</h2>
-								<span class="image right"><img src="images/Headshots-118.jpg" alt=""/></span>
+								<span class="image right"><img src="images/jacobHeadshot.jpg" alt=""/></span>
 								<p style="margin-bottom: 15px;">I love creating tools to simplify, automate, and enable. 
 									Here are some of the technologies I have used in my academic and professional projects:</p>
 								<h3 style="margin-bottom: 15px;">Languages and Frameworks</h3>
