More wording updates

--- a/index.html
+++ b/index.html
@@ -60,22 +60,21 @@
 							<article id="about">
 								<h2 class="major" style="margin-bottom: 15px;">About</h2>
 								<span class="image right"><img src="images/jacobHeadshot.jpg" alt=""/></span>
-								<p style="margin-bottom: 15px;">I love creating tools to simplify, automate, and enable. 
+								<p style="margin-bottom: 15px;">I love creating tools that simplify, automate, and enable. 
 									Here are some of the technologies I have used in my academic and professional projects:</p>
 								<h3 style="margin-bottom: 15px;">Languages and Frameworks</h3>
 									<ul style="margin-bottom: 15px;">
-										<li>Python and JavaScript</li>
 										<li>C# with ASP.NET Core</li>
+										<li>React with Next.js</li>
+										<li>Python</li>
 										<li>Java with Spring</li>
-										<li>C++ and Arduino</li>
-										<li>Pytest and Selenium WebDriver</li>
+										<li>C++ for Arduino</li>
 									</ul>
-								<h3 style="margin-bottom: 15px;">Tools and Environments</h3>
+								<h3 style="margin-bottom: 15px;">Other Technologies</h3>
 									<ul>
-										<li>Docker, GitLab CI, Google Cloud, and AWS</li>
-										<li>MySQL and MongoDB</li>
-										<li>Linux, Windows, MacOS, and Android</li>
-										<li>VS Code, Vim, PyCharm, IntelliJ, Rider</li>
+										<li>Docker, GitLab CI/CD</li>
+										<li>Google Cloud, Google Apps Script</li>
+										<li>MySQL, MongoDB</li>
 									</ul>
 								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p> -->
 							</article>
@@ -118,7 +117,7 @@
 									</ul>
 
 									<p>
-										Along with these technical accomplishments, I regularly presented the project with my team to others, including fellow students, course staff, and industry professionals.
+										Along with the technical work, I regularly presented the project with my team to others, including fellow students, course staff, and industry professionals.
 									</p>
 								<!-- </section> -->
 							</article>
@@ -439,7 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Jacob L. Smith 2023</p>
+						<p class="copyright">&copy; Jacob L. Smith 2024</p>
 					</footer>
 
 			</div>
